Cleanup of motor_control_real and signal_processing packages

--- a/ros2_ws/src/motor_control_real/package.xml
+++ b/ros2_ws/src/motor_control_real/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>motor_control_real</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>This ROS 2 package provides a dynamic setpoint generator designed for controlling a real DC motor.</description>
   <maintainer email="rovestrada@gmail.com">rovestrada</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
