--- a/ros2_ws/src/signal_processing/package.xml
+++ b/ros2_ws/src/signal_processing/package.xml
@@ -3,9 +3,11 @@
 <package format="3">
   <name>signal_processing</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
-  <license>TODO: License declaration</license>
+  <description>
+    ROS 2 package that provides signal processing nodes including a signal generator and a signal processor.
+  </description>
+  <maintainer email="fectec151@gmail.com">fectec</maintainer>
+  <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
