--- a/ros2_ws/src/puzzlebot_description/package.xml
+++ b/ros2_ws/src/puzzlebot_description/package.xml
@@ -3,11 +3,16 @@
 <package format="3">
   <name>puzzlebot_description</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>This package provides a complete robot description for the Puzzlebot.</description>
   <maintainer email="fectec151@gmail.com">fectec</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>ros2launch</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
