--- a/ros2_ws/src/puzzlebot_controller/package.xml
+++ b/ros2_ws/src/puzzlebot_controller/package.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>puzzlebot_description</name>
+  <name>puzzlebot_controller</name>
   <version>0.0.0</version>
-  <description>This package provides a complete robot description for the Puzzlebot.</description>
+  <description>TODO: Package description</description>
   <maintainer email="fectec151@gmail.com">fectec</maintainer>
-  <license>Apache-2.0</license>
+  <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>joint_state_publisher_gui</exec_depend>
-  <exec_depend>rviz2</exec_depend>
   <exec_depend>ros2launch</exec_depend>
-  <exec_depend>ros_gz_sim</exec_depend>
-  <exec_depend condition="$ROS_DISTRO >= iron">gz_ros2_control</exec_depend>
-  <exec_depend condition="$ROS_DISTRO == humble">ign_ros2_control</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
