Puzzlebot XBOX colaboration working!

--- a/ros2_ws/src/puzzlebot_controller/CMakeLists.txt
+++ b/ros2_ws/src/puzzlebot_controller/CMakeLists.txt
@@ -20,6 +20,7 @@ install(
 
 install(PROGRAMS
   ${PROJECT_NAME}/simulation_velocity_controller.py
+  ${PROJECT_NAME}/real_velocity_controller.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
