feat: Add docker file and docker-compose.yml to create a container with the Puzzlebot simulator

--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,8 @@ catkin_build/
 
 # Ignore Docker files if you're using dockerized environment
 
-docker-compose.yml
-Dockerfile
+# docker-compose.yml
+# Dockerfile
 
 # Ignore temporary files
 
