--- a/ros2_ws/src/custom_interfaces/CMakeLists.txt
+++ b/ros2_ws/src/custom_interfaces/CMakeLists.txt
@@ -12,7 +12,8 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/SetProcessBool.srv"
-  DEPENDENCIES std_msgs
+  "msg/OpenLoopPose.msg"
+  DEPENDENCIES std_msgs geometry_msgs
 )
 
 if(BUILD_TESTING)
