feature: added OpenLoopPathGenerator node

--- a/ros2_ws/src/puzzlebot_controller/CMakeLists.txt
+++ b/ros2_ws/src/puzzlebot_controller/CMakeLists.txt
@@ -22,6 +22,7 @@ install(PROGRAMS
   ${PROJECT_NAME}/simulation_velocity_controller.py
   ${PROJECT_NAME}/real_velocity_controller.py
   ${PROJECT_NAME}/open_loop_controller.py
+  ${PROJECT_NAME}/open_loop_path_generator.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
