feature: tested M like trajectory

--- a/ros2_ws/src/puzzlebot_controller/config/open_loop_path_generator_params.yaml
+++ b/ros2_ws/src/puzzlebot_controller/config/open_loop_path_generator_params.yaml
@@ -1,27 +1,27 @@
-# --- Time-based square ---
+# --- Time-based "M" --
 open_loop_path_generator:
   ros__parameters:
     waypoints_json: |
       [
         {
-          "x": 0.1,
-          "y": 0.0,
-          "total_time": 5.0
-        },
-        {
-          "x": 0.1,
-          "y": 0.1,
-          "total_time": 5.0
-        },
-        {
           "x": 0.0,
-          "y": 0.1,
-          "total_time": 5.0
+          "y": 0.5,
+          "total_time": 10.0
         },
         {
-          "x": 0.0,
+          "x": -0.5,
           "y": 0.0,
-          "total_time": 5.0
+          "total_time": 10.0
+        },
+        {
+          "x": -1.0,
+          "y": 0.5,
+          "total_time": 10.0
+        },
+        {
+          "x": -1.0,
+          "y": 0.0,
+          "total_time": 10.0
         }
       ]
     max_linear_speed: 0.16
