--- a/ros2_ws/src/puzzlebot_controller/CMakeLists.txt
+++ b/ros2_ws/src/puzzlebot_controller/CMakeLists.txt
@@ -7,9 +7,12 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
-find_package(rclpy REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(geometry_msgs REQUIRED)
+
+find_package(rclpy            REQUIRED)
+find_package(std_msgs         REQUIRED)
+find_package(geometry_msgs    REQUIRED)
+find_package(nav_msgs         REQUIRED)
+find_package(tf2_ros          REQUIRED)
 
 ament_python_install_package(${PROJECT_NAME})
 
@@ -23,6 +26,7 @@ install(PROGRAMS
   ${PROJECT_NAME}/real_velocity_controller.py
   ${PROJECT_NAME}/open_loop_controller.py
   ${PROJECT_NAME}/open_loop_path_generator.py
+  ${PROJECT_NAME}/localization.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -32,5 +36,13 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+ament_export_dependencies(
+  rclpy
+  std_msgs
+  geometry_msgs
+  nav_msgs
+  tf2_ros
+)
 
 ament_package()
