refactor: cleanup of puzzlebot_controller

--- a/ros2_ws/src/puzzlebot_bringup/package.xml
+++ b/ros2_ws/src/puzzlebot_bringup/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>puzzlebot_bringup</name>
   <version>0.1.0</version>
-  <description>Bring up launch configuration for PuzzleBot.</description>
+  <description>Bring up launch configuration for the puzzlebot.</description>
   <maintainer email="fectec151@gmail.com">fectec</maintainer>
   <license>Apache-2.0</license>
 
