--- a/ros2_ws/src/puzzlebot_description/package.xml
+++ b/ros2_ws/src/puzzlebot_description/package.xml
@@ -2,8 +2,8 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>puzzlebot_description</name>
-  <version>0.0.0</version>
-  <description>This package provides a complete robot description for the Puzzlebot.</description>
+  <version>0.1.0</version>
+  <description>This package provides a complete robot description for the puzzlebot.</description>
   <maintainer email="fectec151@gmail.com">fectec</maintainer>
   <license>Apache-2.0</license>
 
