--- a/ros2_ws/src/puzzlebot_control/package.xml
+++ b/ros2_ws/src/puzzlebot_control/package.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>puzzlebot_controller</name>
+  <name>puzzlebot_control</name>
   <version>0.1.0</version>
-  <description>This package provides controllers for the puzzlebot.</description>
+  <description>
+  This package provides controllers for the puzzlebot.
+  </description>
   <maintainer email="fectec151@gmail.com">fectec</maintainer>
   <license>Apache-2.0</license>
 
