--- a/ros2_ws/src/puzzlebot_control/config/open_loop_point_controller_config.yaml
+++ b/ros2_ws/src/puzzlebot_control/config/open_loop_point_controller_config.yaml
@@ -4,14 +4,20 @@ open_loop_path_generator:
     update_rate: 1.0
     waypoints_json: |
       [
-        { "x": 0.0,  "y": 0.25, "total_time": 6.0 },
-        { "x": -0.25,"y": 0.0,  "total_time": 6.0 },
-        { "x": -0.5, "y": 0.25, "total_time": 6.0 },
-        { "x": -0.5, "y": 0.0,  "total_time": 6.0 }
+        { "x": 0.0,  "y": 0.25, "total_time": 5.0 },
+        { "x": -0.25,"y": 0.0,  "total_time": 5.0 },
+        { "x": -0.5, "y": 0.25, "total_time": 5.0 },
+        { "x": -0.5, "y": 0.0,  "total_time": 5.0 }
       ]
+    min_linear_speed: 0.1
     max_linear_speed: 0.17
+    min_angular_speed: 0.1
     max_angular_speed: 1.0
-    safety_margin: 0.2
+    drift_margin: 0.0
+
+open_loop_point_controller:
+  ros__parameters:
+    update_rate: 100.0
 
 # Speed-based square
 # open_loop_path_generator:
@@ -24,10 +30,12 @@ open_loop_path_generator:
 #         { "x": 0.0,  "y": 0.25, "lin_speed": 0.15, "rot_speed": 0.8 },
 #         { "x": 0.0,  "y": 0.0,  "lin_speed": 0.15, "rot_speed": 0.8 }
 #       ]
+#     min_linear_speed: 0.1
 #     max_linear_speed: 0.17
+#     min_angular_speed: 0.1
 #     max_angular_speed: 1.0
-#     safety_margin: 0.2
+#     drift_margin: 0.0
 
-open_loop_point_controller:
-  ros__parameters:
-    update_rate: 50.0
+# open_loop_point_controller:
+#   ros__parameters:
+#     update_rate: 100.0
