--- a/ros2_ws/src/puzzlebot_control/package.xml
+++ b/ros2_ws/src/puzzlebot_control/package.xml
@@ -4,7 +4,7 @@
   <name>puzzlebot_control</name>
   <version>0.1.0</version>
   <description>
-  This package provides controllers for the puzzlebot.
+  This package provides controllers for the Puzzlebot.
   </description>
   <maintainer email="fectec151@gmail.com">fectec</maintainer>
   <license>Apache-2.0</license>
