test: detection and PID stopping working

--- a/ros2_ws/src/puzzlebot_bringup/package.xml
+++ b/ros2_ws/src/puzzlebot_bringup/package.xml
@@ -3,11 +3,23 @@
 <package format="3">
   <name>puzzlebot_bringup</name>
   <version>0.1.0</version>
-  <description>Bring up launch configuration for the puzzlebot.</description>
+  <description>Bringup package for the Puzzlebot.</description>
   <maintainer email="fectec151@gmail.com">fectec</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <build_depend>launch</build_depend>
+  <build_depend>launch_ros</build_depend>
+  <build_depend>puzzlebot_vision</build_depend>
+  <build_depend>puzzlebot_control</build_depend>
+  <build_depend>puzzlebot_behavior</build_depend>
+
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
+  <exec_depend>puzzlebot_vision</exec_depend>
+  <exec_depend>puzzlebot_control</exec_depend>
+  <exec_depend>puzzlebot_behavior</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
