--- a/ros2_ws/src/puzzlebot_bringup/CMakeLists.txt
+++ b/ros2_ws/src/puzzlebot_bringup/CMakeLists.txt
@@ -12,6 +12,10 @@ install(
   DESTINATION share/${PROJECT_NAME}/
 )
 
+install(DIRECTORY config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
