--- a/ros2_ws/src/puzzlebot_control/config/pid_point_controller_config.yaml
+++ b/ros2_ws/src/puzzlebot_control/config/pid_point_controller_config.yaml
@@ -33,3 +33,4 @@ pid_point_controller:
     min_angular_vel: -1.0
     max_angular_vel: 1.0
     auto_request_next: true
+    use_constant_linear_speed: false
