--- a/ros2_ws/src/puzzlebot_bringup/config/traffic_light_fsm_config.yaml
+++ b/ros2_ws/src/puzzlebot_bringup/config/traffic_light_fsm_config.yaml
@@ -1,8 +1,8 @@
 traffic_light_fsm:
   ros__parameters:
     update_rate: 50.0
-    green_speed: 0.17
-    yellow_speed: 0.14
+    green_proportional: 0.45
+    yellow_proportional: 0.10
 
 color_blob_detection:
   ros__parameters:
@@ -14,7 +14,7 @@ color_blob_detection:
     hsv_red2_low: [160, 100, 100]
     hsv_red2_high: [180, 255, 255]
     hsv_green_low: [40, 60, 50]
-    hsv_green_high: [150, 255, 255]
+    hsv_green_high: [110, 255, 255]
     hsv_yellow_low: [15, 100, 100]
     hsv_yellow_high: [40 , 255, 255]
 
@@ -47,10 +47,9 @@ pid_path_generator:
   ros__parameters:
     waypoints_json: |
       [
-        { "x": 1.0, "y": 0.0 },
-        { "x": 1.0, "y": 1.0 },
-        { "x": 0.0, "y": 1.0 },
-        { "x": 0.0, "y": 0.0 }
+        { "x": 0.8, "y": 0.0 },
+        { "x": 1.6, "y": 0.8 },
+        { "x": 2.4, "y": -0.8 }
       ]
     min_waypoint_distance: 0.1
     max_waypoint_distance: 2.0
@@ -66,8 +65,8 @@ pid_point_controller:
     Kd_Omega: 0.0
     goal_tolerance: 0.08
     heading_tolerance: 0.08
-    min_linear_vel: 0.1
-    max_linear_vel: 0.17
+    min_linear_vel: 0.10
+    max_linear_vel: 0.20
     min_angular_vel: -1.0
     max_angular_vel: 1.0
     auto_request_next: true
