--- a/ros2_ws/src/puzzlebot_bringup/config/line_following_config.yaml
+++ b/ros2_ws/src/puzzlebot_bringup/config/line_following_config.yaml
@@ -1,11 +1,46 @@
+line_follow_controller:
+  ros__parameters:
+    update_rate: 50.0
+    linear_velocity: 0.06
+    Kp_Omega: 0.2
+    Ki_Omega: 0.1
+    Kd_Omega: 0.1
+    max_angular_speed: 1.5
+    line_timeout: 0.5
+    velocity_scale_factor: 1.0
+    steering_deadband: 0.06
+
+line_detection:
+  ros__parameters:
+    update_rate: 30.0
+    target_width: 640
+    target_height: 480
+    perspective_tl_x: 250
+    perspective_tl_y: 400
+    perspective_bl_x: 250
+    perspective_bl_y: 470
+    perspective_tr_x: 390
+    perspective_tr_y: 400
+    perspective_br_x: 390
+    perspective_br_y: 470
+    gaussian_kernel_size: 5
+    gaussian_sigma: 5
+    grayscale_threshold: 125
+    morph_kernel_size: 3
+    morph_erode_iterations: 7
+    morph_dilate_iterations: 7
+    min_contour_area: 500
+    max_contour_area: 5000000
+    filter_alpha: 0.1
+
 traffic_light_fsm:
   ros__parameters:
     update_rate: 50.0
     color_detection_timeout: 0.5 
     green_velocity_scale: 1.0
     yellow_velocity_scale: 0.6
-    pid_toggle_service: 'point_pid/pid_toggle'
-    pid_parameter_service: 'pid_point_controller/set_parameters'
+    pid_toggle_service: 'line_pid/pid_toggle'
+    pid_parameter_service: 'line_follow_controller/set_parameters'
 
 color_blob_detection:
   ros__parameters:
@@ -39,38 +74,3 @@ color_blob_detection:
     morph_erode_iterations: 4
     morph_dilate_iterations: 4
 
-odometry_localization:
-  ros__parameters:
-    update_rate: 100.0
-    integration_rate: 100.0
-    wheel_base: 0.19
-    wheel_radius: 0.051
-
-pid_path_generator:
-  ros__parameters:
-    waypoints_json: |
-      [
-        { "x": 0.6, "y": 0.0 },
-        { "x": 1.2, "y": 0.6 },
-        { "x": 1.8, "y": 0.6 },
-        { "x": 2.4, "y": 0.0 }
-      ]
-    min_waypoint_distance: 0.1
-    max_waypoint_distance: 2.0
-
-pid_point_controller:
-  ros__parameters:
-    update_rate: 50.0
-    Kp_V: 0.15
-    Ki_V: 0.0
-    Kd_V: 0.0
-    Kp_Omega: 0.09
-    Ki_Omega: 0.0
-    Kd_Omega: 0.0
-    goal_tolerance: 0.08
-    heading_tolerance: 0.09
-    min_linear_vel: 0.1
-    max_linear_vel: 0.17
-    min_angular_vel: -0.15
-    max_angular_vel: 0.15
-    auto_request_next: true
