--- a/ros2_ws/src/puzzlebot_bringup/config/puzzletrack.yaml
+++ b/ros2_ws/src/puzzlebot_bringup/config/puzzletrack.yaml
@@ -1,7 +1,10 @@
-yolov8_recognition:
+yolov8_detection:
   ros__parameters:
+    image_topic: 'image_raw'
+    use_compressed: false
+    
     model_name: 'puzzlebot_traffic_signs.pt'
-    confidence_threshold': 0.3
+    confidence_threshold: 0.3
     update_rate: 10.0
 
 line_follow_controller:
@@ -18,26 +21,34 @@ line_follow_controller:
 
 line_detection:
   ros__parameters:
+    image_topic: 'image_raw'
+    use_compressed: false
     update_rate: 30.0
-    target_width: 640
-    target_height: 480
-    perspective_tl_x: 218
-    perspective_tl_y: 350
-    perspective_bl_x: 210
-    perspective_bl_y: 460
-    perspective_tr_x: 410
-    perspective_tr_y: 350
-    perspective_br_x: 410
-    perspective_br_y: 460
+    target_width: 640     
+    target_height: 480     
+    
+    perspective_tl_x: 250  
+    perspective_tl_y: 400
+    perspective_bl_x: 250  
+    perspective_bl_y: 470
+    perspective_tr_x: 390  
+    perspective_tr_y: 400
+    perspective_br_x: 390  
+    perspective_br_y: 470
+    
     gaussian_kernel_size: 5
     gaussian_sigma: 5
-    grayscale_threshold: 220
+    
+    grayscale_threshold: 125
     morph_kernel_size: 3
-    morph_erode_iterations: 60
-    morph_dilate_iterations: 70
-    min_contour_area: 300
+    morph_erode_iterations: 7
+    morph_dilate_iterations: 7
+    
+    min_contour_area: 500
     max_contour_area: 5000000
+    
     filter_alpha: 0.1
+    
     min_line_continuity_area: 15000
     min_line_height: 100
 
@@ -54,6 +65,7 @@ traffic_fsm:
     intersection_angular_vel: 0.5
     image_width: 640
     image_height: 480
+
     sign_ahead_class: 'fwd'
     sign_right_class: 'right'
     sign_left_class: 'left'
@@ -63,31 +75,54 @@ traffic_fsm:
 
 color_blob_detection:
   ros__parameters:
+    image_topic: 'image_raw'
     update_rate: 30.0
-    debug_view: false
-    hsv_red1_low: [0, 60, 100]
-    hsv_red1_high: [10, 255, 255]
-    hsv_red2_low: [160, 60, 100]
-    hsv_red2_high: [180, 255, 255]
-    hsv_green_low: [50, 35, 40]
-    hsv_green_high: [110, 255, 255]
-    hsv_yellow_low: [15, 40, 90]
-    hsv_yellow_high: [40 , 255, 255]
-
-    blob_min_threshold: 10
-    blob_max_threshold: 250
-    blob_min_area: 200
+    use_compressed: false
+    
+    hsv_green_h_low: 40
+    hsv_green_s_low: 70
+    hsv_green_v_low: 70
+    hsv_green_h_high: 80
+    hsv_green_s_high: 255
+    hsv_green_v_high: 255
+    
+    hsv_yellow_h_low: 20
+    hsv_yellow_s_low: 150
+    hsv_yellow_v_low: 150
+    hsv_yellow_h_high: 35
+    hsv_yellow_s_high: 255
+    hsv_yellow_v_high: 255
+    
+    hsv_red1_h_low: 0
+    hsv_red1_s_low: 100
+    hsv_red1_v_low: 100
+    hsv_red1_h_high: 10
+    hsv_red1_s_high: 255
+    hsv_red1_v_high: 255
+    
+    hsv_red2_h_low: 160
+    hsv_red2_s_low: 100
+    hsv_red2_v_low: 100
+    hsv_red2_h_high: 180
+    hsv_red2_s_high: 255
+    hsv_red2_v_high: 255
+    
+    blob_min_threshold: 30
+    blob_max_threshold: 255
+    blob_min_area: 30
     blob_max_area: 10000000
-    blob_min_convexity: 0.5
+    blob_min_convexity: 0.1
     blob_max_convexity: 1.0
-    blob_min_circularity: 0.8
+    blob_min_circularity: 0.5
     blob_max_circularity: 1.0
-    blob_min_inertia_ratio: 0.2
+    blob_min_inertia_ratio: 0.5
     blob_max_inertia_ratio: 1.0
-
-    gaussian_kernel_size: [9, 9]
-    gaussian_sigma: 5
-    grayscale_threshold: 10
-    morph_kernel_size: [3, 3]
-    morph_erode_iterations: 10
+    
+    gaussian_kernel_size_width: 9
+    gaussian_kernel_size_height: 9
+    gaussian_sigma: 2
+    grayscale_threshold: 5
+    morph_kernel_size_width: 3
+    morph_kernel_size_height: 3
+    morph_erode_iterations: 8
     morph_dilate_iterations: 8
