--- a/ros2_ws/src/puzzlebot_control/config/pid_point_controller_config.yaml
+++ b/ros2_ws/src/puzzlebot_control/config/pid_point_controller_config.yaml
@@ -1,8 +1,8 @@
 odometry_localization:
   ros__parameters:
-    update_rate: 200.0
-    integration_rate: 100.0
-    wheel_base: 0.185
+    update_rate: 60.0
+
+    wheel_base: 0.19
     wheel_radius: 0.051
 
 pid_path_generator:
@@ -19,17 +19,23 @@ pid_path_generator:
 
 pid_point_controller:
   ros__parameters:
-    update_rate: 100.0
+    update_rate: 30.0
+
     Kp_V: 0.15
     Ki_V: 0.0
     Kd_V: 0.0
-    Kp_Omega: 0.1
+
+    Kp_Omega: 0.09
     Ki_Omega: 0.0
     Kd_Omega: 0.0
+
     goal_tolerance: 0.08
-    heading_tolerance: 0.08
+    heading_tolerance: 0.09
+
     min_linear_vel: 0.1
     max_linear_vel: 0.17
-    min_angular_vel: -1.0
-    max_angular_vel: 1.0
-    auto_request_next: true
+
+    min_angular_vel: -0.15
+    max_angular_vel: 0.15
+
+    velocity_scale_factor: 1.0
