fix: change to using compressed

--- a/ros2_ws/src/puzzlebot_bringup/config/traffic_light_pid_point_config.yaml
+++ b/ros2_ws/src/puzzlebot_bringup/config/traffic_light_pid_point_config.yaml
@@ -1,7 +1,7 @@
 color_blob_detection:
   ros__parameters:
     image_topic: 'image_raw'
-    use_compressed: False
+    use_compressed: True
 
     update_rate: 30.0
     
