--- a/ros2_ws/src/puzzlebot_bringup/config/puzzletrack.yaml
+++ b/ros2_ws/src/puzzlebot_bringup/config/puzzletrack.yaml
@@ -1,7 +1,7 @@
 color_blob_detection:
   ros__parameters:
     image_topic: 'image_raw'
-    use_compressed: False
+    use_compressed: True
 
     update_rate: 30.0
     
@@ -56,7 +56,7 @@ color_blob_detection:
 yolov8_detection:
   ros__parameters:
     image_topic: 'image_raw'
-    use_compressed: false
+    use_compressed: True
     
     model_name: 'puzzlebot_traffic_signs.pt'
     confidence_threshold: 0.3
@@ -65,7 +65,7 @@ yolov8_detection:
 line_detection:
   ros__parameters:
     image_topic: 'image_raw'
-    use_compressed: False
+    use_compressed: True
 
     update_rate: 30.0
 
