--- a/ros2_ws/src/puzzlebot_bringup/config/traffic_light_line_following_config.yaml
+++ b/ros2_ws/src/puzzlebot_bringup/config/traffic_light_line_following_config.yaml
@@ -1,9 +1,9 @@
 color_blob_detection:
   ros__parameters:
     image_topic: 'image_raw'
-    use_compressed: True
+    use_compressed: False
 
-    update_rate: 30.0
+    update_rate: 60.0
     
     hsv_green_h_low: 50
     hsv_green_s_low: 35
@@ -58,7 +58,7 @@ line_detection:
     image_topic: 'image_raw'
     use_compressed: True
 
-    update_rate: 30.0
+    update_rate: 60.0
 
     target_width: 640
     target_height: 480
@@ -78,7 +78,7 @@ line_detection:
     grayscale_threshold: 95
     morph_kernel_size: 3
     morph_erode_iterations: 40
-    morph_dilate_iterations: 90
+    morph_dilate_iterations: 40
 
     min_contour_area: 180
     max_contour_area: 500000
@@ -102,12 +102,12 @@ line_follow_controller:
 
 traffic_light_fsm:
   ros__parameters:
-    update_rate: 30.0
+    update_rate: 60.0
 
     color_detection_timeout: 2.0
 
     green_velocity_scale: 1.0
     yellow_velocity_scale: 0.6
 
-    controller_on_service: 'line_follow_controller/controller_on'
-    controller_parameter_service: 'line_follow_controller/set_parameters'
+    line_follow_controller_on_service: 'line_follow_controller/set_parameters'
+    line_follow_controller_parameter_service: 'line_follow_controller/controller_on'        
